--- a/Jack/Jack.fsproj
+++ b/Jack/Jack.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Compositions.fs" />
     <Compile Include="VirtualMachine.fs" />
     <Compile Include="Assembly.fs" />
     <Compile Include="Translator.fs" />
